--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@ rel="stylesheet">
   <header class="header">
     <div class="container">
      
+     <nav class="header-nav">
       <ul class="header-list">
-        <li class="header-item">
+        <li class="header-item-logo">
           <a class="header-link" href="/"><img class="header-logo" src="./img/logo.svg" alt="logo photo">
         </a> 
         <li class="header-item feature">
@@ -40,6 +41,7 @@ rel="stylesheet">
           <a class="header-link header-link-sign" href="#">Sign up</a> 
         </li>
       </ul>
+     </nav>
     </div>
   </header>
 
