--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ rel="stylesheet">
           <a class="header-link" href="#">Login
         </a>
         </li>
-        <li class="header-item header-item-sign">
-          <a class="header-link header-link-sign" href="#">Sign up</a> 
+        <li class="header-item-sign">
+          <a class="header-link-sign" href="#">Sign up</a> 
         </li>
       </ul>
      </nav>
